# ytree

./: .editorconfig  .gitignore  CMakeLists.txt  README  README.md  arc.c  arc.cpp  archive.cpp  chgrp.cpp  chmod.c  chmod.cpp  chown.cpp  clock.c  clock.cpp  color.cpp  config.h  copy.c  copy.cpp  delete.c  dirwin.c  dirwin.cpp  disp.cpp  error.cpp  execute.cpp  filespec.c  filespec.cpp  filewin.c  filewin.cpp  freesp.c  freesp.cpp  global.c  global.cpp  group.cpp  history.cpp  init.cpp  input.c  input.cpp  keyhtab.c  keyhtab.cpp  lha.c  (+38 more)
.github/workflows/: build.yml
man/: CMakeLists.txt  ytree.1
share/: CMakeLists.txt  ytree.desktop
src/: CMakeLists.txt  arc.cpp  archive.cpp  chgrp.cpp  chmod.cpp  chown.cpp  clock.cpp  config.h.in  copy.cpp  delete.cpp  dirwin.cpp  disp.cpp  edit.cpp  error.cpp  execute.cpp  filespec.cpp  filewin.cpp  freesp.cpp  global.cpp  group.cpp  hex.cpp  history.cpp  init.cpp  input.cpp  keyhtab.cpp  lha.cpp  login.cpp  main.cpp  match.cpp  mkdir.cpp  move.cpp  passwd.cpp  path.cpp  pipe.cpp  print.cpp  profile.cpp  quit.cpp  rar.cpp  readtree.cpp  rename.cpp  (+13 more)
